BUG#8877: Post-merge fixes.